syntax = "proto3";

option go_package = "./pb";

package gserver;

// 玩家进游戏服成功,非客户端消息
message PlayerEntryGameOk {
  bool isReconnect = 1;
}