syntax = "proto3";

option go_package = "./pb";

import "player.proto";

package gserver;

// 账号登录请求
message LoginReq {
  string accountName = 1;
  string password = 2;
}

// 账号登录回复
message LoginRes {
  string error = 1;
  string accountName = 2;
  int64 accountId = 3;
  string loginSession = 4; // 账号验证成功后的缓存session
  GameServerInfo gameServer = 5; // 游戏服信息
}

// 注册账号
message AccountReg {
  string accountName = 1;
  string password = 2;
}

// 注册账号回复
message AccountRes {
  string error = 1;
  string accountName = 2;
  int64 accountId = 3;
}

// 游戏服务器信息
message GameServerInfo {
  int32 serverId = 1; // 服务器编号
  string clientListenAddr = 2; // 游戏服监听客户端地址
}

// 玩家登录游戏服
message PlayerEntryGameReq {
  int64 accountId = 1;
  string loginSession = 2; // 账号验证成功后的缓存session
  int32 regionId = 3; // 区服id
}

// 玩家登录游戏服回复
// @Player
message PlayerEntryGameRes {
  string error = 1;
  int64 accountId = 2;
  int64 playerId = 3;
  int32 regionId = 4; // 区服id
  string playerName = 5;
  PlayerGuildData guildData = 6; // 公会数据
}

// 创建角色
message CreatePlayerReq {
  int64 accountId = 1;
  string loginSession = 2; // 账号验证成功后的缓存session
  int32 regionId = 3; // 区服id
  string name = 4; // 玩家名
  int32 gender = 5; // 性别
}

// 创建角色
message CreatePlayerRes {
  string error = 1;
  int64 accountId = 2;
  int32 regionId = 3; // 区服id
  string name = 4; // 玩家名
}

// 测试命令
message TestCmd {
  string cmd = 1;
}